# sinopac-nt-community

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: 2026-06-26-sinopac-extraction-design.md  sinopac.md
examples/: sinopac_data_tester.py  sinopac_exec_tester.py
python/sinopac_nt/: __init__.py  config.py  constants.py  data.py  execution.py  factories.py  providers.py  tags.py
python/tests/: conftest.py  test_config.py  test_execution.py  test_factories.py  test_smoke.py  test_tags.py
src/: lib.rs
src/common/: consts.rs  enums.rs  instrument.rs  mod.rs  parse.rs  testing.rs  tick_size.rs  urls.rs
src/http/: client.rs  error.rs  mod.rs  models.rs  parse.rs  query.rs
src/python/: http.rs  mod.rs  websocket.rs
src/websocket/: client.rs  error.rs  handler.rs  messages.rs  mod.rs  order_parse.rs  parse.rs
test_data/: account_balance.json  account_margin.json  account_pnl.json  account_positions.json  contracts_futures.json  contracts_options.json  contracts_stocks.json  market_kbars.json  market_snapshots.json  market_ticks.json  orders_trades.json  ws_bidask.json  ws_bidask_all_zeros.json  ws_bidask_zeros.json  ws_deal_futures.json  ws_deal_stock.json  ws_error.json  ws_order_futures.json  ws_order_stock.json  ws_order_update.json  ws_subscribed.json  ws_tick_futures.json  ws_tick_stock.json
tests/: http.rs  websocket.rs
