[package]
name = "sinopac-nt-community"
version = "0.1.0"
edition = "2024"
rust-version = "1.96.0"
authors = ["Martingale42 <wcmc9527@gmail.com>"]
license = "LGPL-3.0-or-later"
description = "Independent community Sinopac (Taiwan markets) adapter for NautilusTrader"
repository = "https://github.com/Martingale42/sinopac-nt-community"
readme = "README.md"
# Keep the published crate Rust-only; the Python package + CI live in the repo, not the crate.
exclude = ["/python", "/examples", "/docs", "/.github"]

[lib]
name = "sinopac_nt"
crate-type = ["rlib", "cdylib"]

[features]
default = ["high-precision"]
python = [
  "nautilus-common/python",
  "nautilus-core/python",
  "nautilus-model/python",
  "nautilus-network/python",
  "pyo3",
  "pyo3-async-runtimes",
]
extension-module = [
  "nautilus-common/extension-module",
  "nautilus-core/extension-module",
  "nautilus-model/extension-module",
  "nautilus-network/extension-module",
  "python",
  "pyo3/extension-module",
]
high-precision = ["nautilus-model/high-precision"]

[dependencies]
nautilus-common = { version = "0.58.0", features = ["live"] }
nautilus-core = { version = "0.58.0" }
nautilus-model = { version = "0.58.0" }
nautilus-network = { version = "0.58.0" }

anyhow = "1.0.102"
arc-swap = "1.9.1"
chrono = { version = "0.4.45", default-features = false, features = ["serde", "std", "clock"] }
dashmap = "6.2.1"
log = { version = "0.4.32", features = ["std", "kv_unstable", "serde", "release_max_level_debug"] }
serde = { version = "1.0.228", default-features = false, features = ["derive", "std", "rc"] }
serde_json = { version = "1.0.150", default-features = false, features = ["raw_value", "std"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", default-features = false, features = ["rt-multi-thread", "sync", "fs", "io-util", "net", "time", "macros", "signal"] }
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-webpki-roots"] }
ustr = { version = "1.1.0", features = ["serde"] }

pyo3 = { version = "0.28.3", default-features = false, features = ["chrono", "hashbrown", "indexmap", "macros", "multiple-pymethods", "rust_decimal", "serde"], optional = true }
pyo3-async-runtimes = { version = "0.28.0", default-features = false, features = ["attributes", "tokio", "tokio-runtime"], optional = true }

[dev-dependencies]
axum = { version = "0.8.9", default-features = false, features = ["tokio", "http1", "json", "query", "ws"] }
futures-util = { version = "0.3.32", default-features = false, features = ["std", "async-await", "sink"] }
rstest = "0.26.1"
