[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "sinopac-nt-community"
version = "0.1.0"
description = "Independent community Sinopac (Taiwan markets) adapter for NautilusTrader"
readme = "README.md"
requires-python = ">=3.12,<3.15"
license = { text = "LGPL-3.0-or-later" }
authors = [{ name = "Martingale42", email = "wcmc9527@gmail.com" }]
dependencies = ["nautilus_trader==1.228.0"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.maturin]
manifest-path = "Cargo.toml"
module-name = "sinopac_nt._sinopac"
python-source = "python"
features = ["extension-module"]
