[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "sinopac-nt-community"
version = "0.1.0"
description = "Independent community Sinopac (Taiwan markets) adapter for NautilusTrader"
readme = "README.md"
requires-python = ">=3.12,<3.15"
license = { text = "LGPL-3.0-or-later" }
authors = [{ name = "Martingale42", email = "wcmc9527@gmail.com" }]
dependencies = ["nautilus_trader==1.228.0"]

[project.optional-dependencies]
# pytest-asyncio is pinned to 0.23.8 (the version NautilusTrader 1.228.0 is tested
# against); it requires pytest<9 and still provides the `event_loop` fixture the
# ported integration tests depend on.
dev = ["pytest>=8,<9", "pytest-asyncio==0.23.8"]

# Installed by `uv run`/`uv sync` by default so `uv run pytest` finds the test deps.
[dependency-groups]
dev = ["sinopac-nt-community[dev]"]

[tool.maturin]
manifest-path = "Cargo.toml"
module-name = "sinopac_nt._sinopac"
python-source = "python"
features = ["extension-module"]

[tool.pytest.ini_options]
testpaths = ["python/tests"]
asyncio_mode = "strict"
